correction de l'overflow du carousel

--- a/style.css
+++ b/style.css
@@ -134,11 +134,12 @@ nav .fa {
 /* ------ Carousel ------- */
 .slider {
     box-sizing: border-box;
-    width: 100rem;
-    margin: auto;
+    width: 50rem;
+    height: 40rem;
     text-align: center;
     overflow: hidden;
-}
+  }
+
 .slider_navigation {
     display: flex;
     flex-direction: row;
@@ -152,6 +153,13 @@ nav .fa {
     margin: 0 0.5rem;
 }
 
+.slider_navigation a:active {
+    top: 1px;
+}
+.slider_navigation  a:focus {
+    background: #000;   
+}
+
 .slider_navigation a img {
     width: 4rem;
     height: 4rem;
@@ -160,32 +168,36 @@ nav .fa {
 .slider_navigation a:hover {
     background: var(--bg-color);
 }
-
+  
 .slides {
     display: flex;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
 }
-.slide {
+
+.slides div {
     scroll-snap-align: start;
-    flex-shrink: 0;
-    width: 1000px;
-    height: 600px;
-    border-radius: 10px;
+    flex-shrink: 0; 
+    width: 100%;
+    height: 30rem; 
+    margin-right: 50px; 
+    border-radius: 10px; 
     background: var(--first-color);
-    transition: transform 0.5s;
-    display: flex;
-    position: relative;
-    flex-direction: column;
+    transform-origin: center center; 
+    transform: scale(1); 
+    transition: transform 0.5s; 
+    position: relative; 
+    display: flex; 
     justify-content: center;
     align-items: center;
+    font-size: 100px;
 }
 
 .slide h1 img{
     z-index: 2;
     position: absolute;
-    width: 20rem;
+    width: 10rem;
     height: auto;
     top: 5rem;
     left: 40%;
@@ -203,7 +215,7 @@ nav .fa {
 .adress {
     z-index: 3;
     position: absolute;
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: bolder;
     font-style: italic;
     color: var(--bg-color);
@@ -213,21 +225,23 @@ nav .fa {
 .slides::-webkit-scrollbar {
     display: none;
 }
+
 /* ------ list ------- */
 .list {
     display: block;
     margin: auto;
     text-align: center;
     padding: 2%;
+    width: 100%;
 }
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     gap: 1%;
 }
 
-.list-col {
+.grid-col {
     flex-basis: 32%;
     border-radius: 10px;
     margin-bottom: 30px;
